--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.MarvelComics" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -18,6 +18,14 @@
         <item name="cornerFamily">cut</item>
         <item name="cornerSize">0dp</item>
         <item name="cornerSizeBottomRight">24dp</item>
+    </style>
+
+    <style name="Theme.MarvelComics.splash" parent="Theme.SplashScreen">
+        <item name="postSplashScreenTheme">@style/Theme.MarvelComics</item>
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+
     </style>
 
     <style name="progressBarStyle" parent="@style/Theme.AppCompat">
